--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,6 +103,16 @@ jobs:
         sudo apt update -y
         sudo apt install -y zlib1g-dev liblua5.3-dev xvfb
 
+    - name: Install CMake
+      run: |
+        wget https://github.com/Kitware/CMake/releases/download/v3.1.0/cmake-3.1.0-Linux-x86_64.tar.gz
+        tar -xvf cmake-3.1.0-Linux-x86_64.tar.gz
+        echo "::add-path::$(pwd)/cmake-3.1.0-Linux-x86_64/bin"
+
+    - run: |
+        echo "$PATH"
+        cmake --version
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
