Remove some debug output

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -176,16 +176,8 @@ jobs:
       run: make -j
       working-directory: build
 
-    - run: ldd texworks
-      working-directory: build
-
-    - run: ldd test_poppler-qt5
-      working-directory: build
-
-    - run: ldd ${Qt5_DIR}/plugins/platforms/libqxcb.so
-
     - name: Test
-      run: QT_DEBUG_PLUGINS=1 LD_LIBRARY_PATH="/usr/local/lib:${LD_LIBRARY_PATH}" QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" xvfb-run ctest -V
+      run: LD_LIBRARY_PATH="/usr/local/lib:${LD_LIBRARY_PATH}" QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" xvfb-run ctest -V
       working-directory: build
 
 ################################################################################
