Make Qt 5.3 a special case

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        qt: [5.3, 5.12.8, 5.15.0]
+        # The "ancient versions" (with Qt 5.3) are a special case to be included separately
+        qt: [5.12.8, 5.15.0]
         disable-warnings: [false]
         hunspell-server: [github]
         include:
