Remove "Build with" to make more of the lib-versions visible

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
 ################################################################################
 
   build-linux-ancient_versions:
-    name: Build with Qt ${{ matrix.qt }}, Poppler ${{ matrix.poppler }}, Hunspell ${{ matrix.hunspell }}
+    name: Qt ${{ matrix.qt }}, Poppler ${{ matrix.poppler }}, Hunspell ${{ matrix.hunspell }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
