Add debug output back in

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,8 +189,10 @@ jobs:
       run: make -j
       working-directory: build
 
+    - run: ldd "${Qt5_DIR}/plugins/platforms/libqxcb.so"
+
     - name: Test
-      run: LD_LIBRARY_PATH="/usr/local/lib:${LD_LIBRARY_PATH}" QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" xvfb-run ctest -V
+      run: QT_DEBUG_PLUGINS=1 LD_LIBRARY_PATH="/usr/local/lib:${LD_LIBRARY_PATH}" QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" xvfb-run ctest -V
       working-directory: build
 
 ################################################################################
