--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,6 +125,9 @@ jobs:
       if: ${{ matrix.disable-warnings }}
       run: patch -p1 < .github/workflows/no-warnings.patch
 
+    - name: Build Hunspell
+      uses: ./.github/actions/build-hunspell
+
     - name: Install Dependencies
       run: |
         sudo apt update -y
