--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,7 +183,7 @@ jobs:
   build-win:
     name: Build on Windows
     runs-on: windows-latest
-    if: false
+#    if: false
 #    defaults:
 #      run:
 #        shell: bash
