--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -234,8 +234,13 @@ jobs:
 
     - name: Install dependencies
       # git is needed for getting git revision information
-      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
+      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-poppler mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
+
+    - name: Build Hunspell
+      uses: ./.github/actions/build-hunspell
+      with:
+        version: '${{ matrix.hunspell }}'
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
@@ -273,8 +278,9 @@ jobs:
     - name: Install
       run: msys2do cmake --build build --target install
 
+#/mingw64/bin/libhunspell-1.7-0.dll 
     - name: Copy DLLs
-      run: msys2do cp /mingw64/bin/libbz2-1.dll /mingw64/bin/libcrypto-1_1-x64.dll /mingw64/bin/libcurl-4.dll /mingw64/bin/libdouble-conversion.dll /mingw64/bin/libfreetype-6.dll /mingw64/bin/libgcc_s_seh-1.dll /mingw64/bin/libglib-2.0-0.dll /mingw64/bin/libgraphite2.dll /mingw64/bin/libharfbuzz-0.dll /mingw64/bin/libhunspell-1.7-0.dll /mingw64/bin/libiconv-2.dll /mingw64/bin/libicudt65.dll /mingw64/bin/libicuin65.dll /mingw64/bin/libicuuc65.dll /mingw64/bin/libidn2-0.dll /mingw64/bin/libintl-8.dll /mingw64/bin/libjpeg-8.dll /mingw64/bin/liblcms2-2.dll /mingw64/bin/liblzma-5.dll /mingw64/bin/libnghttp2-14.dll /mingw64/bin/libnspr4.dll /mingw64/bin/libopenjp2-7.dll /mingw64/bin/libpcre-1.dll /mingw64/bin/libpcre2-16-0.dll /mingw64/bin/libplc4.dll /mingw64/bin/libplds4.dll /mingw64/bin/libpng16-16.dll /mingw64/bin/libpoppler-98.dll /mingw64/bin/libpoppler-qt5-1.dll /mingw64/bin/libpsl-5.dll /mingw64/bin/libbrotlicommon.dll /mingw64/bin/libbrotlidec.dll /mingw64/bin/libssh2-1.dll /mingw64/bin/libssl-1_1-x64.dll /mingw64/bin/libstdc++-6.dll /mingw64/bin/libtiff-5.dll /mingw64/bin/libunistring-2.dll /mingw64/bin/libwinpthread-1.dll /mingw64/bin/libzstd.dll /mingw64/bin/nss3.dll /mingw64/bin/nssutil3.dll /mingw64/bin/Qt5Concurrent.dll /mingw64/bin/Qt5Core.dll /mingw64/bin/Qt5Gui.dll /mingw64/bin/Qt5Script.dll /mingw64/bin/Qt5ScriptTools.dll /mingw64/bin/Qt5Widgets.dll /mingw64/bin/Qt5Xml.dll /mingw64/bin/smime3.dll /mingw64/bin/zlib1.dll install/
+      run: msys2do cp /mingw64/bin/libbz2-1.dll /mingw64/bin/libcrypto-1_1-x64.dll /mingw64/bin/libcurl-4.dll /mingw64/bin/libdouble-conversion.dll /mingw64/bin/libfreetype-6.dll /mingw64/bin/libgcc_s_seh-1.dll /mingw64/bin/libglib-2.0-0.dll /mingw64/bin/libgraphite2.dll /mingw64/bin/libharfbuzz-0.dll /mingw64/bin/libiconv-2.dll /mingw64/bin/libicudt65.dll /mingw64/bin/libicuin65.dll /mingw64/bin/libicuuc65.dll /mingw64/bin/libidn2-0.dll /mingw64/bin/libintl-8.dll /mingw64/bin/libjpeg-8.dll /mingw64/bin/liblcms2-2.dll /mingw64/bin/liblzma-5.dll /mingw64/bin/libnghttp2-14.dll /mingw64/bin/libnspr4.dll /mingw64/bin/libopenjp2-7.dll /mingw64/bin/libpcre-1.dll /mingw64/bin/libpcre2-16-0.dll /mingw64/bin/libplc4.dll /mingw64/bin/libplds4.dll /mingw64/bin/libpng16-16.dll /mingw64/bin/libpoppler-98.dll /mingw64/bin/libpoppler-qt5-1.dll /mingw64/bin/libpsl-5.dll /mingw64/bin/libbrotlicommon.dll /mingw64/bin/libbrotlidec.dll /mingw64/bin/libssh2-1.dll /mingw64/bin/libssl-1_1-x64.dll /mingw64/bin/libstdc++-6.dll /mingw64/bin/libtiff-5.dll /mingw64/bin/libunistring-2.dll /mingw64/bin/libwinpthread-1.dll /mingw64/bin/libzstd.dll /mingw64/bin/nss3.dll /mingw64/bin/nssutil3.dll /mingw64/bin/Qt5Concurrent.dll /mingw64/bin/Qt5Core.dll /mingw64/bin/Qt5Gui.dll /mingw64/bin/Qt5Script.dll /mingw64/bin/Qt5ScriptTools.dll /mingw64/bin/Qt5Widgets.dll /mingw64/bin/Qt5Xml.dll /mingw64/bin/smime3.dll /mingw64/bin/zlib1.dll install/
 
     - uses: actions/upload-artifact@v1
       with:
@@ -299,6 +305,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Build Hunspell
+      uses: ./.github/actions/build-hunspell
+      with:
+        version: '${{ matrix.hunspell }}'
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
@@ -310,7 +321,6 @@ jobs:
         brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install qt5
         brew install poppler
-        brew install hunspell
         brew install lua
 
     - name: Configure
