--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -231,6 +231,7 @@ jobs:
 
     - run: msys2do pacman -Ss qt5
     - run: msys2do pacman -Ss poppler
+    - run: msys2do pacman -Ss tar
 
     - name: Install dependencies
       # git is needed for getting git revision information
