build-hunspell: install dependencies on Mac OS X

--- a/.github/actions/build-hunspell/action.yml
+++ b/.github/actions/build-hunspell/action.yml
@@ -9,6 +9,10 @@ inputs:
     required: false
     description: 'Run sudo make install after build?'
     default: true
+  install-deps:
+    required: false
+    description: 'Whether or not to automatically install dependencies'
+    default: true
 runs:
   using: 'node12'
   main: 'index.js'
