--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -231,7 +231,7 @@ jobs:
 
     - run: msys2do pacman -Ss qt5
     - run: msys2do pacman -Ss poppler
-    - run: msys2do pacman -Ss autoconf
+    - run: msys2do pacman -Ss automake
 
     - name: Build Hunspell
       uses: ./.github/actions/build-hunspell
