--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -240,15 +240,15 @@ jobs:
 
     - name: Install dependencies
       # git is needed for getting git revision information
-      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-lua
+      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-qt5 mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
 
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v2
-      with:
-        version: ${{ matrix.qt }}
-        modules: 'qtscript'
-        arch: win64_mingw73
+#    - name: Install Qt
+#      uses: jurplel/install-qt-action@v2
+#      with:
+#        version: ${{ matrix.qt }}
+#        modules: 'qtscript'
+#        arch: win64_mingw73
 
     - name: Build Poppler
       uses: ./.github/actions/build-poppler
