--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -248,7 +248,7 @@ jobs:
         version: '${{ matrix.cmake }}'
 
     - run: echo "$PATH"
-    - run: msys2do echo `"$PATH`"
+    - run: msys2do echo `"`$PATH`"
     - run: msys2do cmake --version
 
     - name: Install dependencies
