--- a/.github/actions/install-cmake/package.json
+++ b/.github/actions/install-cmake/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.2.4",
+    "@actions/exec": "^1.0.4",
     "@actions/tool-cache": "^1.3.4"
   }
 }
