--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -268,6 +268,8 @@ jobs:
         brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install lua
 
+    - run: echo "$Qt5_DIR"
+
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
 
